# evologics-drivers

./: Makefile.am  README.md  configure.ac  installer.sh  readme
enea_opt_modem/: Makefile.am  enea_consts.h  uwenea_opt_driver.cc  uwenea_opt_driver.h  uwinterpreter_opt.cc  uwinterpreter_opt.h  uwserial.cc  uwserial.h
executable/base_sample/: Makefile.am  base.cc  main.cc
executable/burst/: Makefile.am  burst_receiver.cc  burst_transmitter.cc  receiver.cc  transmitter.cc
executable/burst_enea/: Makefile.am  burst_receiver.cc  burst_transmitter.cc
executable/burst_lowlevel/: Makefile.am  burst_receiver_ll.cc  burst_transmitter_ll.cc
executable/gpIO/: Makefile.am  pb_receiver.cc  pb_sender.cc  receiver.cc  sender.cc
executable/m2mo/: CalcMHandshake.m  CalcPossibleNodes.m  GetFromPhy.m  MainExp.m  Makefile.am  NF_Exp.m  README  Tx2Phy.m  getFromPhy.m  m2mo.cc  m2mo.h  mainExp.m  runM2Mo.sh  runProcess.m  temp.m  tx2Phy.m
executable/multi-modal/: CheckAck.m  FourBits2Hex.m  Makefile.am  RecvFromMac.m  RecvFromPhy.m  SendToMac.m  bin2hex.m  formFiletoRecv.m  hex2bin.m  m2mo_multi.cc  m2mo_multi.h  modem_configuration.sh  mult_transmitter.cc  tester.m
executable/opto_acoustic/: Makefile.am  receiver.cc  transmitter.cc
executable/source_localization/: Makefile.am  read_from_PHY.m  s_loc_rx.sh  s_loc_tx.sh  s_localization.cpp  s_localization.h  write_to_PHY.m
ms2c_evologics/: Makefile.am  mdriverS2C_EvoLogics.cc  mdriverS2C_EvoLogics.h  minterpreterAT.cc  minterpreterAT.h  msocket.cc  msocket.h
ms2c_evologics_ll/: Makefile.am  mdriverS2C_Evo_lowlev.cpp  mdriverS2C_Evo_lowlev.cpp~  mdriverS2C_Evo_lowlev.h  mdriverS2C_Evo_lowlev.h~  minterpreter.diff  minterpreterTEL.cpp  minterpreterTEL.h  msocket.cc  msocket.h
pandaboard/: GPIO.cc  GPIO.h  Makefile.am
utilities/: Makefile.am  utilities.cc  utilities.h
utilities_ll/: Makefile.am  utilities_ll.cpp  utilities_ll.h
uwmphy_modem/: Makefile.am  uwmconnector.cc  uwmconnector.h  uwmdriver.cc  uwmdriver.h  uwminterpreter.cc  uwminterpreter.h
